just getting the foot off my ass basically

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,20 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
-
+<div class="ui invisible segment" style="background-color: #f28500; border-radius: 0; padding-bottom: 0">
+    <a href="/">
+        <h1 class="ui huge header" style="font-size: 3em; margin-top: 1vw; margin-left: 3vw;">
+            <i class="code icon"></i>
+            <div class="content">
+                Rock & Roll
+                <div class="sub header">with Ember.js</div>
+            </div>
+        </h1>
+    </a>
+    <div class="ui secondary pointing menu" style="margin-left: 2vw; margin-right: 2vw; margin-top: 1vw;">
+        <a href="/bands" class="item active">
+            BANDS
+        </a>
+        <a href="/bands/songs" class="item active">
+            SONGS
+        </a>
+    </div>
+</div>
 {{outlet}}
