--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,20 +1,35 @@
-<div class="ui invisible segment" style="background-color: #f28500; border-radius: 0; padding-bottom: 0">
+<div class="ui invisible segment" style="background-color: transparent; border-radius: 0; padding-bottom: 0">
     <a href="/">
-        <h1 class="ui huge header" style="font-size: 3em; margin-top: 1vw; margin-left: 3vw;">
+        <h1 class="ui huge header" style="font-size: 4em; margin-top: 1vw; margin-left: 3vw; color: 	#F0FFFF">
             <i class="code icon"></i>
             <div class="content">
                 Rock & Roll
-                <div class="sub header">with Ember.js</div>
+                <div class="sub header" style="color:#DCDCDC">with Ember.js</div>
             </div>
         </h1>
     </a>
-    <div class="ui secondary pointing menu" style="margin-left: 2vw; margin-right: 2vw; margin-top: 1vw;">
-        <a href="/bands" class="item active">
-            BANDS
-        </a>
-        <a href="/bands/songs" class="item active">
-            SONGS
-        </a>
-    </div>
+    <div class="ui hidden divider"></div>
+
+    <a href="/bands" style="margin-left: 3em">
+        <button class="circular ui large animated button" style="color: white; background-color: transparent; border: 2px solid white;">
+            <div class="visible content">Bands</div>
+            <div class="hidden content">
+                <i class="bolt icon"></i>
+            </div>
+        </button>
+    </a>
+    <a href="/bands/songs" style="">
+        <button class="circular ui large animated button" style="color: white; background-color: transparent; border: 2px solid white;">
+            <div class="visible content">Songs</div>
+            <div class="hidden content">
+                <i class="music icon"></i>
+            </div>
+        </button>
+    </a>
+
+    <div class="ui divider"></div>
+
 </div>
-{{outlet}}
+<div style="margin-top: 10em">
+    {{outlet}}
+</div>
