chapter 6  actions: Input with action button to add user input to a list, afterwords generating new component for rating

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -4,3 +4,11 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 }
+.band-input{
+    /*style="color:white ;border-radius: 0px; margin-left:3em; background-color: transparent; border-bottom: 2px solid white"*/
+    color: white;
+    border-radius: 0px;
+    margin-left: 3em;
+    background-color: transparent;
+    border-bottom: 2px solid white;
+}
