--- a/app/templates/bands.hbs
+++ b/app/templates/bands.hbs
@@ -1,14 +1,31 @@
-<ul>
+<div class="ui horizontal segments" style="background-color: transparent">
+    <div class="ui segment">
+        <div class="fluid ui action input">
+            {{input type="text" value=name  placeholder="New band..." class="band-input"}}
+            <button class="circular ui vertical animated button" style="color: white; background-color: transparent; border-radius:160px; border: 2px solid white" {{action "createBand"}}>
+                <div class="visible content">Add</div>
+                <div class="hidden content">
+                    <i class="plus icon"></i>
+                </div>
+            </button>
+        </div>
+        <div class="ui hidden divider"></div>
+        <ul>
     {{#each model as |band|}}
-    <a href="" style="margin-left: 6em">
-        <button class="circular ui animated massive button" style="color: white; background-color: transparent; border: 2px solid white;">
+    {{#link-to "bands.band.songs" band}}
+    <a href="" style="margin-left: 0em">
+        <button class="fluid circular ui animated fade huge button" style="color: white; background-color: transparent; border: 2px solid white;">
             <div class="visible content">{{band.name}}</div>
             <div class="hidden content">
-                <i class="right arrow icon"></i>
+                <i class="right arrow icon"></i><i class="music icon"></i>
             </div>
         </button>
     </a>
-    <br>
-    <br>
+    {{/link-to}}
     {{/each}}
 </ul>
+    </div>
+    <div class="ui segment">
+        {{outlet}}
+    </div>
+</div>
