--- a/app/templates/bands/band/songs.hbs
+++ b/app/templates/bands/band/songs.hbs
@@ -10,7 +10,8 @@
 <div class="ui segment" style="background-color: transparent; margin-top:1vh; padding-bottom: 14em; position:relative; border-radius: 0px">
     <ul>
         {{#each model.songs as |song|}}
-        <h1 class="ui header" style="color: white; position: absolute;">{{song.title}} <i class="caret right icon"></i> {{song.rating}}</h1>
+        <h1 class="ui header" style="color: white; position: absolute;">{{song.title}} {{star-rating rating=song.rating item=song onClick=(action "updateRating")}} </h1>
+        <br>
         {{/each}}
     </ul>
 </div>
