--- a/app/templates/bands/band/songs.hbs
+++ b/app/templates/bands/band/songs.hbs
@@ -1,19 +1,24 @@
-<div class="fluid ui action input">
-    {{input type="text" value=title placeholder="New song..." class="band-input"}}
-    <button class="circular ui vertical animated button" style="color: white; background-color: transparent; border-radius:160px; border: 2px solid white"
-        {{action "createSong"}}>
-        <div class="visible content">Add</div>
-        <div class="hidden content">
-            <i class="plus icon"></i>
-        </div>
-    </button>
-</div>
-<div class="ui segment" style="background-color: transparent; margin-top:1vh; padding-bottom: 14em; position:relative; border-radius: 0px">
+<div class="eight wide column" style="background-color: transparent; margin-top:1vh; padding-bottom: 14em; position:relative; border-radius: 0px">
     <ul>
+        {{#if canCreateSong}}
+        <div class="fluid ui action input">
+            {{input type="text" value=title placeholder="New song..." class="band-input"}}
+            <button class="circular ui vertical animated button" disabled={{isAddButtonDisabled}} style="color: white; background-color: transparent; border-radius:160px; border: 2px solid white"
+                {{action "createSong"}}>
+                <div class="visible content">Add</div>
+                <div class="hidden content">
+                    <i class="plus icon"></i>
+                </div>
+            </button>
+        </div>
+        {{/if}}
         {{#each model.songs as |song|}}
-        <h1 class="ui header" style="color: white; position: absolute;">{{song.title}} <i class="sort icon"></i>
+        <h1 class="" style="color: white;">{{song.title}} <i class="sort icon"></i>
             {{song.rating}}</h1>
-        <br>
         {{/each}}
+        {{#unless canCreateSong}}
+        <h1 class="ui disabled header" style="color: white">There are no songs yet. Why don't you <a href=""
+                {{action "enableSongCreation"}}>create one?</a></h1>
+        {{/unless}}
     </ul>
 </div>
