details: Add details for each band
Add subrouter for bands, so that every band has a song and details
router. Also modified ui with better input outlook.

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -4,11 +4,17 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 }
-.band-input{
+#band-input{
     /*style="color:white ;border-radius: 0px; margin-left:3em; background-color: transparent; border-bottom: 2px solid white"*/
     color: white;
     border-radius: 0px;
     margin-left: 3em;
+    background-color: transparent;
+    border-bottom: 2px solid white;
+}
+#songs-input {
+    color: white;
+    border-radius: 0px;
     background-color: transparent;
     border-bottom: 2px solid white;
 }
