--- a/app/templates/bands/index.hbs
+++ b/app/templates/bands/index.hbs
@@ -1,3 +1,1 @@
-<div class="ui segment" style="border: 2px solid white; background-color: transparent; padding-bottom: 16em">
-    <h1 class="ui header" style="color: white; position: absolute">SELECT A BAND</h1>
-</div>
+{{outlet}}
