Edit description: Make description editable
Add a controller for description to be able to edit then save it. If not
saved the transition will be canceled with an alert.

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -18,3 +18,8 @@ body {
     background-color: transparent;
     border-bottom: 2px solid white;
 }
+#ui-form{
+    background-color: transparent;
+    color: white;
+    border: 2px solid lightblue;
+}
